unpackaged/main/default/objects/Image/fields/ImageTextField1__c.field-meta.xml
<CustomField>
    <fullName>ImageTextField1__c</fullName>
    <label>ImageTextField1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>