unpackaged/main/default/objects/Image/fields/ImageTextField2__c.field-meta.xml
<CustomField>
    <fullName>ImageTextField2__c</fullName>
    <label>ImageTextField2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>