unpackaged/main/default/objects/Image/fields/ImageTextField3__c.field-meta.xml
<CustomField>
    <fullName>ImageTextField3__c</fullName>
    <label>ImageTextField3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>