unpackaged/main/default/objects/Image/fields/MoreTextField1__c.field-meta.xml
<CustomField>
    <fullName>MoreTextField1__c</fullName>
    <label>MoreTextField1</label>
    <length>1</length>
    <type>Text</type>
</CustomField>