unpackaged/main/default/objects/Image/fields/MoreTextField2__c.field-meta.xml
<CustomField>
    <fullName>MoreTextField2__c</fullName>
    <label>MoreTextField2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>