unpackaged/main/default/objects/Image/fields/MoreTextField3__c.field-meta.xml
<CustomField>
    <fullName>MoreTextField3__c</fullName>
    <label>MoreTextField3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>