unpackaged/main/default/objects/Image/fields/NewImageCheckbox__c.field-meta.xml
<CustomField>
    <fullName>NewImageCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewImageCheckbox</label>
    <type>Checkbox</type>
</CustomField>