unpackaged/main/default/objects/Image/fields/NewImageCurrencyField__c.field-meta.xml
<CustomField>
    <fullName>NewImageCurrencyField__c</fullName>
    <label>NewImageCurrencyField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>