unpackaged/main/default/objects/Image/fields/NewImageTextField__c.field-meta.xml
<CustomField>
    <fullName>NewImageTextField__c</fullName>
    <label>NewImageTextField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>